# camel_tools

./: .env  .gitignore  .readthedocs.yml  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  docker-compose.yml  pyproject.toml  server.py  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md  feature_request.md  usage-and-other-questions.md  usage-and-support.md
camel_tools/: VERSION  __init__.py
camel_tools/arclean/: camel_arclean.py
camel_tools/calima_star/: __init__.py  analyzer.py  camel_calima_star.py  database.py  errors.py  generator.py  reinflector.py  utils.py
camel_tools/cli/: __init__.py  camel_arclean.py  camel_calima_star.py  camel_data.py  camel_dediac.py  camel_diac.py  camel_morphology.py  camel_transliterate.py  camel_word_tokenize.py  utils.py
camel_tools/data/: __init__.py  catalogue.json  catalogue.py  downloader.py  post_install.py
camel_tools/dialectid/: __init__.py  common.py  model26.py  model6.py
camel_tools/disambig/: __init__.py  bert.py  bert_morph_dataset.py  camel_disambig.py  common.py  mle.py  score_function.py  simple.py  test.py
camel_tools/disambig/bert/: __init__.py  _bert_morph_dataset.py  unfactored.py
camel_tools/morphology/: __init__.py  analyzer.py  database.py  errors.py  generator.py  reinflector.py  utils.py
camel_tools/ner/: __init__.py
camel_tools/scripts/camel_disambig/: camel_disambig.py
camel_tools/sentiment/: __init__.py
camel_tools/tagger/: __init__.py  common.py  default.py
camel_tools/tokenizers/: __init__.py  morphological.py  word.py
camel_tools/transliterate/: __init__.py  camel_transliterate.py  transliterator.py
camel_tools/utils/: __init__.py  charmap.py  charsets.py  dediac.py  normalize.py  stringutils.py  transliterate.py
camel_tools/utils/charmaps/: dediac.json  (+21 more)
docs/: requirements.txt
docs/cli/: camel_arclean.md  camel_calima_star.md  camel_transliterate.md
docs/source/: api.rst  cli_tools.rst  conf.py  getting_started.rst  index.rst  license.rst  overview.rst  reference.rst
tests/: __init__.py  test_charmap.py  test_meta.py  test_normalize.py  test_stringutils.py  test_transliterate.py
tests/utils/: test_normalize.py
(+50 files in other folders)
